@@ -1,5 +1,7 @@
 CHANGELOG fuer c't-Bot
 ======================
+2016-09-25: Remotecall-Display (DISPLAY_REMOTECALL_AVAILABLE) erweitert um Statusanzeige der Verhalten. Kann damit das Verhaltensdisplay (DISPLAY_BEHAVIOUR_AVAILABLE) ersetzen.
+
 2016-09-24: Verhaltenskonfiguration aufgeraeumt
 
 2016-09-24: Kompatibilitaet mit aktuellem AVR Compiler (4.9.2) und gcc 6.2
